# ventura_wgpu

./: Cargo.toml  rustfmt.toml
src/: application.rs  lib.rs  main.rs  runner.rs  transform.rs
src/render/: camera.rs  context.rs  mod.rs  texture.rs  util.rs  vertex.rs
src/render/pipeline/: mod.rs
src/render/pipeline/sprite/: mod.rs
src/render/pipeline/sprite/shaders/: shader.wgsl
src/render/shaders/: shader.wgsl
src/render/sprite/: instance.rs  mod.rs  pipeline.rs
src/render/sprite/shaders/: shader.wgsl
