[package]
name = "ventura"
description = "A 2D RPG survival adventure written in rust."
authors = ["abstraq <contact@abstraq.dev"]
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.23.1", features = ["derive"] }
glam = { version = "0.30.4", features = ["bytemuck"] }
image = "0.25.6"
pollster = "0.4.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
wgpu = "25.0.2"
winit = "0.30.11"
